--- a/tutorial/note_app/pubspec.yaml
+++ b/tutorial/note_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.5.0
+  cloud_firestore: ^5.4.2
 
 dev_dependencies:
   flutter_test:
