--- a/tutorial/chat_app/pubspec.yaml
+++ b/tutorial/chat_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.5.0
   firebase_auth: ^5.3.0
   cloud_firestore: ^5.4.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
